--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                                     <p class="author">Author: {{ post.author }}</p>
                                 </div>
                             </div>
-                            <a href="#" class="post-link">
+                            <a href="{% url 'post_detail' post.slug %}" class="post-link">
                                 <h2 class="card-title">{{ post.item }}</h2>
                                 <p class="card-text">{{ post.short_description }}</p>
                             </a>
