--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -14,9 +14,7 @@
          <h3>{% trans "Sign In" %}</h3>
 
 
-         <p>{% blocktrans %}Welcome back to the code|star blog. To leave a comment or like a post, please log in. If you
-          have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
-          first.{% endblocktrans %}</p>
+         <p>{% blocktrans %}Welcome back to Pick N Choose. To take advantages of all of our features, please log in below. If you don't have an account, you can create one <a class="link" href="{{ signup_url }}">here.</a>{% endblocktrans %}</p>
       </div>
     </div>
     <div class="row">
