--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                             </div>
                             <a href="{% url 'post_detail' post.slug %}" class="post-link">
                                 <h2 class="card-title">{{ post.item }}</h2>
-                                <p class="card-text">{{ post.short_description }}</p>
+                                <p class="card-text">{{ post.address }}</p>
                             </a>
                             <hr />
                             <p class="card-text text-muted h6">{{ post.created_on}} <i class="far fa-heart"></i>
