Changing styling for create posts page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -210,7 +210,7 @@ body {
 
 /* Heading in Post Item page */
 
-.postitem-heading h1 {
+.postitem-heading {
     text-align: center;
     font-weight: bold;
     font-size: 50px;
