--- a/static/css/style.css
+++ b/static/css/style.css
@@ -278,7 +278,7 @@ margin-bottom: 60px;
 .section-head h4 {
 position: relative;
 padding:0;
-color:#f91942;
+color:#E84610;
 line-height: 1;
 letter-spacing:0.3px;
 font-size: 34px;
@@ -291,7 +291,7 @@ margin-bottom:30px;
 content: '';
 width: 60px;
 height: 3px;
-background: #f91942;
+background: #E84610;
 position: absolute;
 left: 0px;
 bottom: -10px;
@@ -328,7 +328,7 @@ text-transform: none;
 content: '';
 width: 60px;
 height: 3px;
-background: #f91942;
+background: #E84610;
 position: absolute;
 left: 0px;
 bottom: -10px;
@@ -337,7 +337,7 @@ margin: 0 auto;
 }
 .extra-text span {
 font-weight: 700;
-color:#f91942;
+color:#E84610;
 }
 .item {
 background: #fff;
@@ -353,7 +353,7 @@ transition: all .5s ease 0;
 transition: all 0.5s ease 0s;
 }
 .item:hover{
-background:#f91942;
+background:#E84610;
 box-shadow:0 8px 20px 0px rgba(0, 0, 0, 0.2);
 -webkit-transition: all .5s ease 0;
 transition: all .5s ease 0;
@@ -375,7 +375,7 @@ transition: all 0.5s ease 0s;
 .item .icon {
 font-size: 40px;
 margin-bottom:25px;
-color: #f91942;   
+color: #E84610; 
 width: 90px;
 height: 90px;
 line-height: 96px;
@@ -383,27 +383,27 @@ border-radius: 50px;
 }
 .item .feature_box_col_one{
 background:rgba(247, 198, 5, 0.20);
-color:#f91942
+color:#E84610
 }
 .item .feature_box_col_two{
 background:rgba(255, 77, 28, 0.15);
-color:#f91942
+color:#E84610
 }
 .item .feature_box_col_three{
 background:rgba(0, 147, 38, 0.15);
-color:#f91942
+color:#E84610
 }
 .item .feature_box_col_four{
 background:rgba(0, 108, 255, 0.15);
-color:#f91942
+color:#E84610
 }
 .item .feature_box_col_five{
 background:rgba(146, 39, 255, 0.15);
-color:#f91942
+color:#E84610
 }
 .item .feature_box_col_six{
 background:rgba(23, 39, 246, 0.15);
-color:#f91942
+color:#E84610
 }
 .item p{
 font-size:15px;
@@ -425,7 +425,7 @@ width: 50px;
 height: 50px;
 line-height: 50px;
 text-align: center;
-background: #f91942;
+background: #E84610;
 border-radius: 50%;
 color: #fff;
 font-size: 25px;
@@ -461,7 +461,7 @@ position: absolute;
 left: 0;
 top: 0;
 height: 100%;
-background: #f91942;
+background: #E84610;
 width: 10%;
 border-radius: 10px;
 -webkit-transition: all 1s;
