Add table of contents to readme.md

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,7 +64,7 @@ body {
 }
 
 .masthead-text {
-    background-color: #445261;
+    background-color: #E84610;
     color: white;
     position: relative;
 }
@@ -81,7 +81,7 @@ body {
     right: 90%;
     height: 100%;
     width: 150%;
-    background: #445261;
+    background: #E84610;
     -webkit-transform: skew(15deg);
     -moz-transform: skew(15deg);
     transform: skew(15deg);
