--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,9 +36,15 @@ body {
     background-color: transparent;
 }
 
+.card-img-top {
+    width: 100%;
+    height: 22vw;
+    object-fit: cover;
+    min-height: 250px;
+}
+
 .image-container {
     position: relative;
-    max-height: 600px;
 }
 
 .image-flash {
