--- a/static/css/style.css
+++ b/static/css/style.css
@@ -356,27 +356,27 @@ border-radius: 20px;
 border:5px solid rgba(0, 0, 0, 0.07);
 margin-bottom: 30px;
 -webkit-transition: all .5s ease 0;
-transition: all .5s ease 0;
+transition: all .5s ease 0s;
 transition: all 0.5s ease 0s;
 }
 .item:hover{
 background:#E84610;
 box-shadow:0 8px 20px 0px rgba(0, 0, 0, 0.2);
 -webkit-transition: all .5s ease 0;
-transition: all .5s ease 0;
+transition: all .5s ease 0s;
 transition: all 0.5s ease 0s;
 }
 .item:hover .item, .item:hover span.icon{
 background:#fff;
 border-radius:10px;
 -webkit-transition: all .5s ease 0;
-transition: all .5s ease 0;
+transition: all .5s ease 0s;
 transition: all 0.5s ease 0s;
 }
 .item:hover h6, .item:hover p{
 color:#fff;
 -webkit-transition: all .5s ease 0;
-transition: all .5s ease 0;
+transition: all .5s ease 0s;
 transition: all 0.5s ease 0s;
 }
 .item .icon {
