--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -12,9 +12,9 @@
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <!-- The featured image URL goes in the src attribute -->
                 {% if "placeholder" in post.featured_image.url %}
-                <img src="https://i.imgur.com/pv9dt38.png" width="100%">
+                <img src="https://i.imgur.com/pv9dt38.png" width="100%" alt="Placeholder Image">
                 {% else %}
-                <img src=" {{ post.featured_image.url }}" width="100%">
+                <img src=" {{ post.featured_image.url }}" width="100%" alt="Uploaded Image">
                 {% endif %}
             </div>
         </div>
@@ -68,9 +68,9 @@
         </div>
     <div class="picinside">
         {% if "placeholder" in post.featured_image.url %}
-                <img src="https://i.imgur.com/pv9dt38.png">
+                <img src="https://i.imgur.com/pv9dt38.png" alt="Placeholder image">
                 {% else %}
-                <img src=" {{ post.featured_image.url }}">
+                <img src=" {{ post.featured_image.url }}" alt="Uploaded Image">
                 {% endif %}
     </div>
     <div class="row">
