Add small fixes for base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
             <a href="https://www.facebook.com" aria-label="facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-square fa-2x ms-3"></i></a>
             <a href="https://twitter.com" aria-label="Twitter" target="_blank" rel="noopener"><i class="fab fa-twitter-square fa-2x ms-3"></i></a>
             <a href="https://www.instagram.com" aria-label="Instagram" target="_blank" rel="noopener"><i class="fab fa-instagram-square fa-2x ms-3"></i></a>
-            <a href="https://www.youtube.com" aria-label="Youtube" target="_blank" rel="noopener"><i class="fab fa-youtube-square fa-2x ms-3"></i></p></a>
+            <a href="https://www.youtube.com" aria-label="Youtube" target="_blank" rel="noopener"><i class="fab fa-youtube-square fa-2x ms-3"></i></a></p>
     </footer>
     <script>
         setTimeout(function () {
